--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
 	},
 	"dependencies": {
 		"@coreui/react-chartjs": "^3.0.0",
-		"@reduxjs/toolkit": "^2.2.3",
+		"@reduxjs/toolkit": "^2.2.6",
 		"@types/react-redux": "^7.1.33",
-		"axios": "^1.6.8",
-		"cropperjs": "^1.6.1",
-		"flowbite": "^2.3.0",
-		"flowbite-react": "^0.7.8",
+		"axios": "^1.7.2",
+		"cropperjs": "^1.6.2",
+		"exceljs": "^4.4.0",
+		"flowbite": "^2.4.1",
+		"flowbite-react": "^0.10.1",
 		"moment": "^2.30.1",
-		"react": "^18.2.0",
+		"react": "^18.3.1",
 		"react-beautiful-dnd": "^13.1.1",
 		"react-ckeditor-component": "^1.1.0",
 		"react-cropper": "^2.3.3",
 		"react-date-range": "^2.0.1",
-		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.51.3",
-		"react-icons": "^5.1.0",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.52.1",
+		"react-icons": "^5.2.1",
 		"react-infinite-scroll-component": "^6.1.0",
 		"react-rating": "^2.0.5",
-		"react-redux": "^9.1.1",
-		"react-router-dom": "^6.22.3",
-		"sonner": "^1.4.41",
-		"uuid": "^9.0.1",
-		"xlsx": "^0.18.5"
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.25.0",
+		"sonner": "^1.5.0",
+		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.79",
-		"@types/react-dom": "^18.2.25",
-		"@vitejs/plugin-react-swc": "^3.6.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react-swc": "^3.7.0",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
-		"eslint-plugin-react": "^7.34.1",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.6",
-		"postcss": "^8.4.38",
-		"tailwindcss": "^3.4.3",
-		"vite": "^5.2.9"
+		"eslint-plugin-react": "^7.34.4",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.8",
+		"postcss": "^8.4.39",
+		"tailwindcss": "^3.4.6",
+		"vite": "^5.3.4"
 	}
 }
