--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"react-ckeditor-component": "^1.1.0",
 		"react-cropper": "^2.3.3",
 		"react-date-range": "^2.0.1",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.1",
 		"react-icons": "^5.2.1",
